# trade_lighter_paradex

./: .env.example  Cargo.toml  ENV_SETUP.md  onboarding.py
src/: main.rs  onboarding.rs
