[package]
name = "trade_lighter_paradex"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.56.0"
chrono = "0.4.41"
futures-util = "0.3.31"
jsonrpsee-core = "0.24.9"
jsonrpsee-types = "0.24.9"
log = "0.4.27"
reqwest =  {version="0.12.24", features=["json"]}
rust_decimal = {version="1.39.0", features=["serde"]}
serde = "1.0.228"
serde_json = "1.0.145"
starknet-core = "0.16.0"
starknet-crypto = "0.8.1"
starknet-signers = "0.14.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features=["full"]}
tokio-tungstenite = {version = "0.28.0", features=["rustls-tls-native-roots"]}
rustls = { version = "0.23.33", features = ["aws-lc-rs"] }
paradex = "0.5.4"
clap = { version = "4.5", features = ["derive"] }
simple_logger = "4.3"
starknet = "0.17.0"
dotenvy = "0.15"
